interpreter/tests/test-modules/syntax-errors.enzo
// ── MALFORMED INPUT / TRAILING COMMA EDGE CASES ──────────────────────

// Valid trailing commas (should succeed)
$goodTable: { $foo: 1, $bar: 2, };
$goodTable;

// Double comma in table (should error)
$badTable1: { $foo: 1,, $bar: 2 };        // error: double comma

// Comma before any item in table (should error)
$badTable2: { ,$foo: 1, $bar: 2 };        // error: leading comma

// Just a comma in table (should error)
$badTable3: { , };                        // error: just comma

// Double comma in list (should error)
$badList1: [1,,2];                        // error: double comma

// Comma before any item in list (should error)
$badList2: [,1,2];                        // error: leading comma

// Just a comma in list (should error)
$badList3: [,];                           // error: just comma

// 10. Invalid parenthesis/brackets/braces
(1 + 2;                 // error: unmatched parenthesis
[1, 2, 3;               // error: unmatched bracket
{ $a: 1, $b: 2;         // error: unmatched brace

// 8. Bindings and rebinding with wrong types
$foo: 7;
$foo <: "text";         // error: cannot assign Text to Number
$foo: "oops";           // error: $foo already defined
